Release ...
* [nt]roff: Support for paragraph-based justification has been added,
  enabled with ".ad p".
* [nt]roff: The ".hylen" request has been introduced to control the
  minimum number of characters a word must contain in order to be subject
  to hyphenation. The default is 5 independent of whether the ".hylang"
  request is active (in that case, it previously had been 4).
* [nt]roff: The ".hypp" request has been introduced to control penalties
  of hyphenation points in ".ad p" mode.
* troff: Fixed a typo in the hyphenation code that could result in the
  insertion of a large negative vertical motion in a word containing a
  character above Unicode point U+0800.
* troff: Fixed "\H" and "\S" to become effective if positioned directly
  after a font change (Bugreport by Dirk-Wilhelm Peters).
* [nt]roff: The ".pull" request (introduced in the previous release) has
  been removed again. It is recommended that the traditional approach to
  re-divert text is used instead.
* [nt]roff: Fixed an invalid memory access that had been introduced with
  local strings in the last release.
* troff: Fixed a segmentation violation if a ligature in a hyphenated
  word was not in the current font (Bugreport by Dirk-Wilhelm Peters).
* troff, dpost: Fixed a rounding error when reading TrueType metrics.
* dpost: Fixed a bug introduced with the previous release that caused
  PostScript errors on a page following colored text unless the "-e"
  option was explicitly specified.
* dpost: Now handles DSC font comments in included PostScript files and
  supplies glyph data for them if specified with a troff ".fp" request.
* dpost: Fixed to compile on NetBSD again (Bugreport by Dirk-Wilhelm Peters).
* eqn: Handles fractional point sizes with "size" and "gsize" now.
* tbl: Fixed a segmentation fault with empty tables that occurred due
  to the changed memory layout introduced in the last release.
* A "Quickstart Guide" document has been added. It is aimed at people